--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
   },
   "dependencies": {
     "core-js": "^3.6.4",
+    "echarts": "^4.6.0",
     "element-ui": "^2.4.5",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.2",
+    "vue-echarts": "^5.0.0-beta.0",
     "vue-property-decorator": "^8.3.0",
     "vue-router": "^3.1.5",
     "vuex": "^3.1.2"
