--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "core-js": "^3.6.4",
     "echarts": "^4.6.0",
     "element-ui": "^2.4.5",
+    "portable-fetch": "^3.0.0",
     "vue": "^2.6.11",
+    "vue-avatar": "^2.2.0",
     "vue-class-component": "^7.2.2",
     "vue-echarts": "^5.0.0-beta.0",
     "vue-property-decorator": "^8.3.0",
