--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -12,6 +12,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: action-yarn
+    - uses: comchangs/action-yarn@v0.1-beta
     - name: Install Dependencies
       run: ----yarn install----
     - name: ---yarn build------
