--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Yarn CLI
     - uses: CultureHQ/actions-yarn@v1.0.1
     - name: Install Dependencies
-      run: ----yarn install----
+      run: yarn install
     - name: ---yarn build------
       run: |
         yarn run build --if-present
