--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -11,11 +11,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Yarn CLI
-    - uses: CultureHQ/actions-yarn@v1.0.1
-    - name: Install Dependencies
-      run: yarn install
-    - name: ---yarn build------
-      run: |
-        yarn run build --if-present
+      - name: checkout develop
+        uses: actions/checkout@v2
+        with:
+          ref: develop
+      - name: Setup node
+        uses: actions/setup-node@v1
+        with:
+          node-version: "10.x"
+      - name: Build project
+        run: yarn && yarn build
+       
