--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -19,4 +19,8 @@ jobs:
           node-version: "10.x"
       - name: Build project
         run: yarn && yarn build
+      - name: deployment
+        run: |
+         echo ${{ secrets.DING_TAI_HOST_PASSWORD }} | scp -r ./dist/* {{ secrets. DING_TAI_HOST_USERNAME }}@{{ secrets.DING_TAI_HOST }}:/home/xiang.li/test
+        
        
