--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -25,8 +25,8 @@ jobs:
           host: ${{ secrets.DING_TAI_HOST }}
           username: ${{ secrets. DING_TAI_HOST_USERNAME }}
           password: ${{ secrets.DING_TAI_HOST_PASSWORD }}
-          target: /home/xiang.li/test
-          source: ./dist/*
+          target: /usr/local/dingtai/frontend/nginx/nginx/client
+          source: ./dingtai/*
           rm: true
         
        
