--- a/.github/workflows/master-deploy.yml
+++ b/.github/workflows/master-deploy.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: "10.x"
-      - name: Build project
+      - name: 编译项目
         run: yarn && yarn build
       - name: SCP Command to Transfer Files
         uses: appleboy/scp-action@v0.0.6
