--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@types/echarts": "^4.4.3",
     "core-js": "^3.6.4",
     "echarts": "^4.6.0",
     "element-ui": "^2.4.5",
@@ -14,7 +15,6 @@
     "vue": "^2.6.11",
     "vue-avatar": "^2.2.0",
     "vue-class-component": "^7.2.2",
-    "vue-echarts": "^5.0.0-beta.0",
     "vue-property-decorator": "^8.4.0",
     "vue-router": "^3.1.5",
     "vuex": "^3.1.2"
